# img-server-rs

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  MIGRATION_SUMMARY.md  README.md  config.toml  docker-compose.yml  package.json
.github/workflows/: docker-build.yml
scripts/: release.py
src/: compression.rs  compression_new.rs  config.rs  errors.rs  handlers.rs  lib.rs  libcompression.rlib  main.rs  test_simple.rs
static/: app.js  app_new.js  index.html
tests/: api_tests.rs  compression_tests.rs  test_compression.rs
