[package]
name = "img-server-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "img_server_rs"
path = "src/lib.rs"

[[bin]]
name = "img-server-rs"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
actix-files = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
imagequant = "4.2"
mozjpeg = "0.9"
jpeg-encoder = "0.6"
png = "0.17"
kamadak-exif = "0.5"
futures = "0.3"
bytes = "1.5"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
mime = "0.3"
uuid = { version = "1.6", features = ["v4"] }
toml = "0.8"

[features]
default = []  # 临时禁用默认特性来测试性能差异
webp = ["image/webp"]
jpeg_rayon = ["image/jpeg_rayon"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

# [profile.dev]
# opt-level = 1

# 基准测试暂时注释掉，因为测试文件不存在
# [[bench]]
# name = "compression_bench"
# harness = false
